--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -2,5 +2,6 @@ FROM node:16.14-alpine
 WORKDIR /app-frontend
 COPY package.json .
 RUN npm install
+EXPOSE 3000
 COPY . .
-ENTRYPOINT ["npm", "start"]
+CMD ["npm", "start"]
