--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -2,6 +2,6 @@ FROM node:16.14-alpine
 WORKDIR /app-backend
 COPY package.json .
 RUN npm install
+COPY . .
 EXPOSE 3001
-COPY . /app-backend
 ENTRYPOINT ["npm", "run" ,"dev"]
