--- a/app/backend/tsconfig.json
+++ b/app/backend/tsconfig.json
@@ -18,6 +18,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "change.me.test.ts"],
   "exclude": ["src/tests"]
 }
